[package]
name = "libgarble"
version = "0.1.0"
authors = ["aweinstock"]

[lib]
name="garble"
crate-type=["staticlib", "dylib"]

[dependencies]
byteorder = "0.5.3"
libc = "0.2.15"
llvmint = "0.0.2"
openssl = "0.8.2"
openssl-sys = "0.7.17"
prefetch = "0.1.0"
rand = "0.3.14"
rayon = "0.4.0"
simd = { git = "https://github.com/huonw/simd" }
simdty = "0.0.3"

[features]
default = []
privacyfree_debugging = []
